--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -9,7 +9,7 @@
     <h1>Homepage</h1>
     <!-- <a> is an anchor tag - we can use anchor tags to link to any kind of resource on the internet, not just other HTML documents. You can link to videos, pdf files, images, and so on, but for the most part, you will be linking to other HTML documents.
      an href (hypertext reference) attribute to the opening anchor tag. 
-      The value of the href attribute is the destination we want our link to go to.-->
+     !!!! The value of the href attribute is the destination we want our link to go to.-->
     <a href="https://www.theodinproject.com/about">About the Odin Project</a>
 </body>
 </html>
