Absolute & Relative link / Images

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -12,6 +12,17 @@
      The value of the href attribute is the destination we want our link to go to.-->
     <a href="https://www.theodinproject.com/about">About the Odin Project</a>
 
-    <p>Para</p>
+    <!-- Relative link is a link to a page on you website and do not include the domain name
+     since it is another page on the same site, it assumes the domain name will be the same as the page we created the link on.
+Relative links only include the file path to the other page, relative to the page you are creating the link on. -->
+  <div>
+    <a href="./pages/about.html">About</a>
+  </div>
+
+  <img src="./images/dog.jpg">
+
+  
+
+
 </body>
 </html>
