--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -19,7 +19,7 @@ Relative links only include the file path to the other page, relative to the pag
     <a href="./pages/about.html">About</a>
   </div>
 
-  <img src="./images/dog.jpg" alt="Phot of a dog" height="310" width="310">
+  <img src="./images/dog.jpg" alt="Photo of a dog" height="310" width="310">
 
   
 
